--- a/package.json
+++ b/package.json
@@ -21,7 +21,8 @@
     "multer": "^1.4.4",
     "mysql2": "^2.3.3",
     "paypal-rest-sdk": "^1.8.1",
-    "sequelize": "^6.16.0"
+    "sequelize": "^6.16.0",
+    "socket.io": "^4.6.1"
   },
   "devDependencies": {
     "nodemon": "^2.0.15",
